--- a/app/src/main/res/drawable/ic_view_list.xml
+++ b/app/src/main/res/drawable/ic_view_list.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="24">
   <path
       android:fillColor="@android:color/white"
-      android:pathData="M6,19c0,1.1 0.9,2 2,2h8c1.1,0 2,-0.9 2,-2V7H6v12zM19,4h-3.5l-1,-1h-5l-1,1H5v2h14V4z"/>
+      android:pathData="M4,14h4v-4H4v4zM4,19h4v-4H4v4zM4,9h4V5H4v4zM9,14h12v-4H9v4zM9,19h12v-4H9v4zM9,5v4h12V5H9z"/>
 </vector>
