--- a/app/src/main/res/layout/item_category_grid.xml
+++ b/app/src/main/res/layout/item_category_grid.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!-- The xmlns:app namespace is required for app attributes like app:tint -->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    android:padding="12dp"
+    android.padding="12dp"
     android:layout_margin="8dp"
     android:background="@drawable/bg_category_item">
 
