--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Theme.FinMate" parent="Theme.MaterialComponents.DayNight.NoActionBar">
@@ -17,48 +18,7 @@
         <!-- Định nghĩa các thuộc tính màu sắc theo theme -->
         <item name="backgroundColor">#F5F5F5</item>
         <item name="surfaceColor">#FFFFFF</item>
-        <item name="cardBackgroundColor">#FFFFFF</item><resources xmlns:tools="http://schemas.android.com/tools">
-
-        <style name="Theme.FinMate" parent="Theme.MaterialComponents.DayNight.NoActionBar">
-            <!-- Primary brand color -->
-            <item name="colorPrimary">@color/purple_500</item>
-            <item name="colorPrimaryVariant">@color/purple_700</item>
-            <item name="colorOnPrimary">@color/white</item>
-
-            <!-- Secondary brand color -->
-            <item name="colorSecondary">@color/teal_200</item>
-            <item name="colorSecondaryVariant">@color/teal_700</item>
-            <item name="colorOnSecondary">@color/black</item>
-
-            <!-- Status bar -->
-            <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-
-            <!-- Custom attributes -->
-            <item name="backgroundColor">#F5F5F5</item>
-            <item name="surfaceColor">#FFFFFF</item>
-            <item name="cardBackgroundColor">#FFFFFF</item>
-            <item name="bottomNavBackgroundColor">#FFFFFF</item>
-
-            <item name="textColorPrimary">@color/black</item>
-            <item name="textColorSecondary">#888888</item>
-            <item name="textColorPositive">#4CAF50</item>
-            <item name="textColorNegative">#F44336</item>
-
-            <item name="editTextBackground">@drawable/edittext_bg</item>
-            <item name="editTextColor">@color/black</item>
-            <item name="editTextColorHint">#888888</item>
-
-            <item name="buttonBackground">@drawable/login_button_bg</item>
-            <item name="buttonTextColor">@color/white</item>
-
-            <item name="iconTint">@color/black</item>
-            <item name="progressBarBackgroundColor">#E0E0E0</item>
-
-            <item name="bottomNavigationStyle">@style/Widget.FinMate.BottomNavigationView</item>
-        </style>
-
-    </resources>
-
+        <item name="cardBackgroundColor">#FFFFFF</item>
         <item name="bottomNavBackgroundColor">#FFFFFF</item>
         <item name="textColorPrimary">@color/black</item>
         <item name="textColorSecondary">#888888</item>
