--- a/app/src/main/res/layout/activity_wallet.xml
+++ b/app/src/main/res/layout/activity_wallet.xml
@@ -55,7 +55,7 @@
             android:gravity="center_vertical">
 
             <TextView
-                android:id="@+id/tv_wallet_name"
+                android:id="@+id/tvWalletName"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -66,7 +66,7 @@
 
             <!-- Số dư -->
             <TextView
-                android:id="@+id/tv_balance"
+                android:id="@+id/tvBalance"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="0 VND"
@@ -98,7 +98,7 @@
             android:textStyle="bold"/>
 
         <ProgressBar
-            android:id="@+id/prog_income"
+            android:id="@+id/progIncome"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="8dp"
@@ -107,7 +107,7 @@
             android:backgroundTint="?attr/progressBarBackgroundColor"/>
 
         <TextView
-            android:id="@+id/tv_income_value"
+            android:id="@+id/tvIncomeValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="+0 VND"
@@ -124,7 +124,7 @@
             android:textStyle="bold"/>
 
         <ProgressBar
-            android:id="@+id/prog_expense"
+            android:id="@+id/progExpense"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="match_parent"
             android:layout_height="8dp"
@@ -133,7 +133,7 @@
             android:backgroundTint="?attr/progressBarBackgroundColor"/>
 
         <TextView
-            android:id="@+id/tv_expense_value"
+            android:id="@+id/tvExpenseValue"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="-0 VND"
