--- a/app/src/main/res/drawable/ic_home.xml
+++ b/app/src/main/res/drawable/ic_home.xml
@@ -5,6 +5,6 @@
     android:viewportWidth="24"
     android:viewportHeight="24">
     <path
-        android:fillColor="#FF9800"
+        android:fillColor="?attr/iconTint"
         android:pathData="M10,20v-6h4v6h5v-8H3v8H10zM12,2.69L17.66,8H15v10h-2v-6H9v6H7V8H4.34L12,2.69z"/>
 </vector>
